// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: with authorization error 1`] = `
<div
  className="login-page"
  id="login_form"
>
  <h1
    className="login-title text-center huge-spacer-bottom"
  >
    login.login_to_sonarqube
  </h1>
  <Alert
    className="huge-spacer-bottom"
    display="block"
    variant="error"
  >
    login.unauthorized_access_alert
  </Alert>
  <OAuthProviders
    identityProviders={
      Array [
        Object {
          "backgroundColor": "#000",
          "iconPath": "/some/path",
          "key": "foo",
          "name": "foo",
        },
      ]
    }
    returnTo=""
  />
  <LoginForm
    collapsed={true}
    onSubmit={[MockFunction]}
  />
  <Connect(GlobalMessages) />
</div>
`;

exports[`should render correctly: with identity providers 1`] = `
<div
  className="login-page"
  id="login_form"
>
  <h1
    className="login-title text-center huge-spacer-bottom"
  >
    login.login_to_sonarqube
  </h1>
  <OAuthProviders
    identityProviders={
      Array [
        Object {
          "backgroundColor": "#000",
          "iconPath": "/some/path",
          "key": "foo",
          "name": "foo",
        },
      ]
    }
    returnTo=""
  />
  <LoginForm
    collapsed={true}
    onSubmit={[MockFunction]}
  />
  <Connect(GlobalMessages) />
</div>
`;

exports[`should render correctly: without any identity providers 1`] = `
<div
  className="login-page"
  id="login_form"
>
  <h1
    className="login-title text-center huge-spacer-bottom"
  >
    login.login_to_sonarqube
  </h1>
  <LoginForm
    collapsed={false}
    onSubmit={[MockFunction]}
  />
  <Connect(GlobalMessages) />
</div>
`;
